@@ -2,26 +2,37 @@
 
   <div id="sidebar-wrapper" class="sidebar-350" ng-show="renderSidebar">
 
-    <ul class="nav nav-tabs">
-      <li ng-repeat="node in nodes track by $index" ng-class="{ 'active': isActive(node.name)}"><a href="#/cluster/{{node.name}}{{routeParams}}" data-toggle="tab">
-        <div class="row">
-          <div class="col-md-8 col-sm-8">
-            <h3><span class="{{node.health_label_class}}">{{node.name}}</span></h3>
+    <ul class="nav">
+      <li class="nav-tabs-header">
+        <div class="list-header clearfix">
+          <div class="pull-right">
+            <a ng-click="sortBy('name')" class="btn btn-xs btn-sort"><i ng-class="sortClass('name')"></i> Name</a>
+            <a ng-click="sortBy('health_value')" class="btn btn-xs btn-sort"><i ng-class="sortClass('health_value')"></i> Health</a>
           </div>
-          <div class="col-md-4 col-sm-4">
-            <span class="pull-right {{node.health_label_class}}">{{node.health.status}}</span>
-          </div>
+          <div class="list-header-title">Nodes</div>
         </div>
-        <div class="row">
-          <div class="col-md-8 col-sm-8">
-            <span class="{{node.health_label_class}}">{{node.hostname}}</span>
+      </li>
+      <ul class="nav nav-tabs">
+        <li ng-repeat="node in nodes|orderBy:sort.col:sort.desc"
+            ng-class="{ 'active': isActive(node.name)}"><a href="#/cluster/{{node.name}}{{routeParams}}" data-toggle="tab">
+          <div class="row">
+            <div class="col-md-8 col-sm-8">
+              <h3><span class="{{node.health_label_class}}">{{node.name}}</span></h3>
+            </div>
+            <div class="col-md-4 col-sm-4">
+              <span class="pull-right {{node.health_label_class}}">{{node.health.status}}</span>
+            </div>
           </div>
-          <div class="col-md-4 col-sm-4">
+          <div class="row">
+            <div class="col-md-8 col-sm-8">
+              <span class="{{node.health_label_class}}">{{node.hostname}}</span>
+            </div>
+            <div class="col-md-4 col-sm-4">
+            </div>
           </div>
-        </div>
-      </a></li>
+        </a></li>
+      </ul>
     </ul>
-
   </div>
 
   <div class="row">
